fix wrap guide styling bug

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -11,7 +11,6 @@
 @syntax-background-color: @base03;
 
 // Guide colors
-@syntax-wrap-guide-color: darken(@base02, 6%);
 @syntax-indent-guide-color: @base02;
 @syntax-invisible-character-color: @base02;
 
